--- a/AssignmentForLoop2.xaml
+++ b/AssignmentForLoop2.xaml
@@ -4,8 +4,9 @@
              x:Class="appForLoopMessege.MainPage">
 
     <StackLayout>
-        <Button Text="Clicked" Clicked="butoon_Clicked" BackgroundColor="Black" Margin="10" TextColor="White"/>
-        <Label x:Name="label" TextColor="Black"/>
+        <Label x:Name="title" Text="year between 1990-2030" TextColor="Black"/>
+        <Button Text="Year" Clicked="OnButtonClicked" BackgroundColor="Red" Margin="20" Padding="20" TextColor="White"/>
+        <Label x:Name="label2" Text="" BackgroundColor="LightGray" TextColor="Black"/>
     </StackLayout>
 
 </ContentPage>
