--- a/ZajelGoogle2.xaml
+++ b/ZajelGoogle2.xaml
@@ -34,6 +34,7 @@
                 Text="Zajel"
                 TextColor="Black"
                  FontSize="Large"
+                 BorderColor="Black"
                  Grid.Row="1" Grid.Column="0" 
                 Clicked="Button_Clicked"/>
 
@@ -41,6 +42,7 @@
                Grid.Row="1" Grid.Column="1"
                TextColor="Black"
                FontSize="Large"
+               BorderColor="Black"
                BackgroundColor="LightGoldenrodYellow"
                Clicked="Button_Clicked_1"
               />
